scripts/nullness/nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8.txt
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Position.java:28: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Position
    @Initialized @NonNull boolean equals(@Initialized @NonNull Position this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Movable.java:10: error: [conflicting.annos] invalid type: conflicting annotations [@Initialized, @NonNull, @Nullable] in type "@Initialized @NonNull @Nullable Position"
    void setPosition(@NotNull @javax.annotation.Nullable Position position);
                                                                  ^
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Board.java:50: error: [argument] incompatible argument for parameter arg1 of Map.put.
        objects.put(position, null);
                              ^
  found   : null (NullType)
  required: @Initialized @NonNull BoardObject
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/BoardTopology.java:13: error: [conflicting.annos] invalid type: conflicting annotations [@Initialized, @NonNull, @Nullable] in type "@Initialized @NonNull @Nullable Position"
    public abstract List<Position> getAdjacentPositions(@NotNull @javax.annotation.Nullable Position position);
                                                                                                     ^
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Actor.java:10: error: [conflicting.annos] invalid type: conflicting annotations [@Initialized, @NonNull, @Nullable] in type "@Initialized @NonNull @Nullable SimulationState"
    void performMove(@NotNull @javax.annotation.Nullable SimulationState simulationState);
                                                                         ^
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/FindPath.java:37: error: [conflicting.annos] invalid type: conflicting annotations [@Initialized, @NonNull, @Nullable] in type "@Initialized @NonNull @Nullable Position"
        boolean accepts(@NotNull @javax.annotation.Nullable Position position);
                                                                     ^
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/FindPath.java:61: error: [argument] incompatible argument for parameter arg1 of Map.put.
        previousPosition.put(from, null);
                                   ^
  found   : null (NullType)
  required: @Initialized @NonNull Position
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/FindPath.java:64: error: [argument] incompatible argument for parameter position of BoardTopology.getAdjacentPositions.
            for (Position adjacentPosition : boardTopology.getAdjacentPositions(current)) {
                                                                                ^
  found   : @Initialized @Nullable Position
  required: @Initialized @NonNull @Nullable Position
8 errors
